@@ -7,7 +7,6 @@ my $prereqs = {
        Data::Validate::IP => 0.08,
       Data::Validate::URI => 0.05,
            Email::Address => 1.889,
-             Net::Subnets => 0.21,
             File::Tempdir => 0.02,
 
 };
